--- a/server/views/post_example.jade
+++ b/server/views/post_example.jade
@@ -6,6 +6,6 @@ block content
   form(name="POST-data", method="post")
     div.input
       span.label Data
-      input(type="text", name="data")
+      input(type="text", name="name") 
     div.actions
       Input(type="submit", value="add")
